--- a/src/welcome.html
+++ b/src/welcome.html
@@ -4,23 +4,24 @@
     <form role="form" submit.delegate="submit()" validation-group.bind="valgrp">
       <div class="form-group">
         <label for="fn">First Name</label>
-        <input type="text" value.bind="user.first" class="form-control" id="fn" placeholder="first name">
+        <input type="text" value.bind="user.first & validate" validate-option="first" class="form-control" id="fn" placeholder="first name">
       </div>
       <div class="form-group">
         <label for="ln">Last Name</label>
-        <input type="text" value.bind="user.last" class="form-control" id="ln" placeholder="last name">
+        <input type="text" value.bind="user.last & validate" validate-option="last" class="form-control" id="ln" placeholder="last name">
       </div>
       <div class="form-group">
         <label>Full Name</label>
         <p class="help-block">${fullName | upper}</p>
       </div>
 
-      <validation-summary></validation-summary>
-
       <button type="submit" class="btn btn-default">Submit</button>
 
       <p><button click.delegate="setValid()">Valid</button></p>
       <p><button click.delegate="setInvalid()">Invalid</button></p>
+
+      <validation-summary></validation-summary>
+
     </form>
   </section>
 </template>
